# PyInvaders2

./: .gitignore  MANIFEST.in  README.md  Readme.md  setup.cfg  setup.py  surfacesequence.py
PyLevelCreator/: setup.py
install/: readme.txt  setup.py
pyinvaders2/: PyInvader2.py  __init__.py  data.py  gametools.py  level_creator.py  pyinvaders2.py
pyinvaders2/levels/: 0001.txt  0002.txt  0004.txt  0006.txt  0011.txt
pylevelcreator/: PyLevelCreator.py
src/: PyInvader2.py  PyInvaders2.py  data.py  keys.py  surfacesequence.py
src/levels/: 0000  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt
