[metadata]
name = PyInvaders2
version = attr: pyinvaders2.__version__
description = An editor for pc screen fonts
author = Karsten Lehmann
author_email = ka.lehmann@yahoo.com
license = GNU GENERAL PUBLIC LICENSE Version 3
url = -
long_description = An editor for psf files written in python3.

[options]
zip_safe = False
include_package_data = True
packages =
	pyinvaders2
install_requires =
	pygame
